assets/css/main.css
/* ... */
	input[type="checkbox"]:checked + label:before,
	input[type="radio"]:checked + label:before {
		content: "\f00c";
		text-align: center;
		background-color: #666;
		color: #fff;
		border: 1px solid #666;
	}

	input[type="radio"] + label:before {
		border-radius: 42px;
	}

.form-horizontal .form-group:after {
	content: "";
	display: table;
	clear: both;
}

.form-group-large {}

	.form-group-large .form-group {
		margin: 1.5em 0;
		position: relative;
	}
	
	.form-group-large label {
		font-size: 1.6em;
		padding: 0.6em 0;
	}
	
	.form-group-large .help-block {
		font-size: 1.2em;
		position: absolute;
		left: 0;
		top: 2.8em;
	}
	
	.form-group-large .checkbox-group .checkbox label,
	.form-group-large .radio-group .radio label {
		padding: 0;
	}
	
	.form-group-large input[type="email"],
	.form-group-large input[type="number"],
	.form-group-large input[type="search"],
	.form-group-large input[type="text"],
	.form-group-large input[type="tel"],
	.form-group-large input[type="url"],
	.form-group-large input[type="password"],
	textarea,
	select {
		font-size: 1.8em;
		padding: 0.75em 1em;
	}


/* Utilities
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.block {
	width: 100%;
}

.hidden {
	display: none;
}

.text-center {
	text-align: center;
}


/* Custom Elements
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.nav-btn {
	margin: 2em 0;
}

.success {
	background-color: #eee;
	padding: 2em;
}
	
	.success p {
		margin: 0;
	}

/* Header
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.header {
	background-image: url("../img/clock.jpg");
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;
	background-attachment: fixed;
	height: 100%;
}

	.header .panel {
		margin-top: 0;
		padding: 10em 0;
/* 		background-color: rgba(0,0,0,0.6); */
		text-align: center;
		color: #fff;
		height: 100%;
	}
	
	.header h1 {
		font-weight: 600;
	}

.header-bg {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: #000;
}

/* For tablets and smaller */
@media (max-width: 750px) {

	.header .panel {
		padding: 60px 0;
	}

	.header img {
		width: 180px;
	}
	
	.header h1 {
		margin: 0.5em 0;
	}
	
	.header h5 {
		font-size: 1.4rem;
	}
}


/* About Section
–––––––––––––––––––––––––––––––––––––––––––––––––– */
#about {
	min-height: 100%;
}


/* Features Section
–––––––––––––––––––––––––––––––––––––––––––––––––– */
#features {
	background-image: linear-gradient(45deg, rgb(144,117,62), rgb(69,56,133));
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;
	background-attachment: fixed;
	min-height: 100%;
}

	#features .panel {
		color: #fff;
		background-color: none;
	}


/* Footer
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.footer {
	background-image: url("../img/clock.jpg");
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;
	background-attachment: fixed;
	height: 10em;
}

	.footer .inner {
		background-color: rgba(0,0,0,0.8);
		height: 100%;
		padding: 2em 0;
		color: #fff;
	}

